k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web	
  template:
   metadata:
    labels:
      component: web
   spec:
    containers:
    - name: k8sdemo
      image: nginx
      ports:
       - containerPort: 8090
