k8s2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web2	
  template:
   metadata:
    labels:
      component: web2
   spec:
    containers:
    - name: k8s2demo
      image: kishanaduka/k8s2
      ports:
       - containerPort: 8060
