k8s2-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-pod
  labels:
    component: web
spec:
  containers:
   - name: k8sdemo
     image: kishanaduka/k8s-demo
     ports:
      - containerPort: 8090
