istiomesh-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: istiomesh-cluster-service
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 8090    
  selector:
     app: istiomesh
