istiomesh-nodeIP.yml
apiVersion: v1
kind: Service
metadata:
  name: istiomesh-nodeport-service
spec:
  type: NodePort
  ports:
   - port: 8090
     targetPort: 8090 
     nodePort: 31500	 
  selector:
     app: istiomesh
