k8s-cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cluster-service
spec:
  type: ClusterIP
  ports:
   - port: 8080
     targetPort: 8080     
  selector:
     component: web
