k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  type: NodePort
  ports:
   - port: 8080
     targetPort: 8080
     nodePort: 31100
  selector:
     component: web
