k8s2-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s2-cluster-service
spec:
  type: ClusterIP
  ports:
   - port: 8060
     targetPort: 8060
  selector:
      component: web2
