k8s2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s2-service
spec:
  type: NodePort
  ports:
   - port: 8060
     targetPort: 8060
     nodePort: 31200
  selector:
     component: web2
