ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
   # nginx.ingress.kubernetes.io/rewrite-target: /display
    # UPDATE ANNOTATION
spec:
  rules:
    - http:
        paths:          
          - path: /getData
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: k8s2-cluster-service
                port:
                  number: 8060
          - path: /
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: k8s-cluster-service
                port:
                  number: 8080
