istiomesh-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiomesh-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiomeshvs
spec:
  hosts:
  - "*"
  gateways:
  - istiomesh-gateway
  http:
  - match:
    - uri:
        exact: /testMesh
    route:
    - destination:
        host: istiomesh-cluster-service.default.svc.cluster.local
        port:
          number: 80
